syntax = "proto3";

package messari.uniswap.v1;

enum Region {
  REGION_NONE = 0;
  REGION_NORTH_AMERICA = 1;
  REGION_SOUTH_AMERICA = 2;
  REGION_EMEA = 4;
  REGION_APAC = 8;
}

message PairCreatedEvent {
  string field1 = 1;
  uint32 field2 = 2;
  int64 field3 = 3;
  optional int64 field4 = 4;
  repeated int64 field5 = 5;
  oneof testOneOf {
    int32 field6 = 6;
    bool field7 = 7;
  }
  Region available_in = 8;
}